--- a/index.html
+++ b/index.html
@@ -34,23 +34,25 @@
             <i class="ri-search-line"></i>
             <input
               type="text"
-              id="search-input"
+              id="searchInput"
               placeholder="Search For A Country..."
             />
           </div>
           <div class="select-box">
             <select name="filter-input" id="filter-input">
               <option value="default">Filter By Region</option>
-              <option value="africa">Africa</option>
-              <option value="america">America</option>
-              <option value="asia">Asia</option>
-              <option value="europe">Europe</option>
-              <option value="oceania">Oceania</option>
+              <option value="Africa">Africa</option>
+              <option value="Americas">Americas</option>
+              <option value="Asia">Asia</option>
+              <option value="Europe">Europe</option>
+              <option value="Oceania">Oceania</option>
             </select>
           </div>
+          
         </div>
         <div id="country-list-container" class="country-list-container"></div>
-        <div id="country-detail-conainer" class="contry-detail-container"></div>
+        <div id="country-detail-container" class="country-detail-container"></div>
+        
       </div>
     </main>
     <script src="main.js"></script>
